@startuml "Todo System"

package "todo" {
  class TodoService {
    + addTodo(title: String, description: String): TodoItem
    + getTodo(id: UUID): TodoItem
    + listTodos(): List
    + updateTodo(id: UUID, status: Status): TodoItem
    + deleteTodo(id: UUID): void
  }
  
  class TodoItem {
    - id: UUID
    - title: String
    - description: String
    - status: Status
    - createdAt: DateTime
    - updatedAt: DateTime
  }
  
  enum Status {
    PENDING
    IN_PROGRESS
    COMPLETED
  }
  
  TodoService "1" -- "0..*" TodoItem : manages >
  TodoItem -- Status
}

@enduml